post to get api in details profile
