# config/swagger/swagger_output.json
@@ -200,21 +200,15 @@
         }
       }
     },
-    "/api/v1/student/profiledetails": {
-      "post": {
+    "/api/v1/student/profiledetails/{id}": {
+      "get": {
         "description": "",
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "example": "any"
-                }
-              }
-            }
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
